k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: elkzone-prod
  labels:
    name: elkzone-prod
    environment: production
---
apiVersion: v1
kind: Namespace
metadata:
  name: elkzone-staging
  labels:
    name: elkzone-staging
    environment: staging
